// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MessageTimestampView > renders the message timestamp in default state 1`] = `
<div>
  <span
    aria-hidden="false"
    aria-live="off"
    class="extra_class content"
    role="link"
    tabindex="0"
  >
    04:58
  </span>
</div>
`;

exports[`MessageTimestampView > renders the message timestamp with extra class names 1`] = `
<div>
  <span
    aria-hidden="false"
    aria-live="off"
    class="extra_class content"
    role="link"
    tabindex="0"
  >
    04:58
  </span>
</div>
`;

exports[`MessageTimestampView > renders the message timestamp with href 1`] = `
<div>
  <a
    aria-live="off"
    class="extra_class content"
    href="~"
  >
    04:58
  </a>
</div>
`;

exports[`MessageTimestampView > renders the message timestamp with inhibit tooltip 1`] = `
<div>
  <span
    aria-hidden="false"
    aria-live="off"
    class="extra_class_1 extra_class_2 content"
    role="link"
    tabindex="0"
  >
    04:58
  </span>
</div>
`;

exports[`MessageTimestampView > renders the message timestamp with received timestamp 1`] = `
<div>
  <span
    aria-hidden="false"
    aria-live="off"
    class="extra_class content"
    role="link"
    tabindex="0"
  >
    04:58
  </span>
</div>
`;
